finished step 2 styling and fixed navbar spacing

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -40,7 +40,7 @@ position: absolute;
 .container{
   background: url("Whiteboard.jpg");
   background-size:cover;
-  height: 689px;
+  height: 719px;
   // margin-top: 50px;
 }
 #container{
@@ -77,3 +77,9 @@ position: absolute;
 .whiteBoardHeader{
   padding: 25px;
 }
+.selectBtn{
+  width: 200px;
+}
+// .wholebody{
+//   margin-top: 60px;
+// }
